# fecs

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: borrow.rs  builder.rs  component.rs  entity.rs  entity_ref.rs  erased_vec.rs  events.rs  lib.rs  query.rs  registry.rs  resources.rs  system.rs  util.rs  world.rs
src/world/: allocator.rs  local.rs  shared.rs
tests/: borrow.rs  builder.rs  events.rs  registry.rs  resources.rs  system.rs
