[package]
name = "fecs"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
fecs-macros = { path = "./macros" }
legion = { git = "https://github.com/TomGillen/legion", rev = "bd441f4811e7a9e877a0f479a674bbdbf4e4cda3" }
# legion = { path = "../legion" }
fxhash = "0.2"
erasable = "1.1"
smallvec = "1.3"
arrayvec = "0.5"
thiserror = "1.0"

[workspace]
members = [".", "macros"]
